--- a/examples/classification/main.ipynb
+++ b/examples/classification/main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -8,12 +15,31 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from sklearn.datasets import make_gaussian_quantiles"
+    "from sklearn.datasets import make_gaussian_quantiles\n",
+    "from tools import (\n",
+    "    relu,\n",
+    "    sigmoid,\n",
+    "    mean_square_error\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load random forest dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,20 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gaussian_quantities' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/danielsarmiento/Desktop/platzi/examples/classification/main.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/danielsarmiento/Desktop/platzi/examples/classification/main.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m X, Y \u001b[39m=\u001b[39m gaussian_quantities\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/danielsarmiento/Desktop/platzi/examples/classification/main.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m Y \u001b[39m=\u001b[39m Y[:, np\u001b[39m.\u001b[39mnewaxis]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gaussian_quantities' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X, Y = gaussian_quantities\n",
     "Y = Y[:, np.newaxis]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### Activation Function"
    ]
   },
   {
@@ -77,28 +107,6 @@
     "plt.grid()\n",
     "plt.scatter(X[:,0], X[:,1], c=Y[:,0], s=20, cmap=plt.cm.Spectral)\n",
     "plt.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sigmoid(x, derivate=False):\n",
-    "\n",
-    "    if derivate:\n",
-    "        return np.exp(-x) / (1 + np.exp(-x)) ** 2\n",
-    "    else:\n",
-    "        return  1 / (1 + np.exp(-x))\n",
-    "\n",
-    "def relu(x, derivate = False):\n",
-    "    if derivate:\n",
-    "        x[x<=0] = 0\n",
-    "        x[x>0]  = 1\n",
-    "        return x\n",
-    "    else:\n",
-    "        return np.maximum(0, x)"
    ]
   },
   {
@@ -2548,7 +2556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
